# customer-support-chatbot-v4

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
backend/config/: __init__.py  settings.py
backend/contracts/: __init__.py  agent.py  rag_tool.py  reports.py  retrieval.py  session.py  sse.py
backend/db/: pool.py
backend/rag/: __init__.py  search.py
backend/rag/tests/: __init__.py  test_rag_search.py
backend/tools/: __init__.py  finx_client.py  schemas.py
backend/tools/tests/: conftest.py  test_finx_client.py
backend/tracing/: __init__.py  config.py  spans.py  thread.py
backend/tracing/tests/: conftest.py  test_tracing.py
openspec/changes/agentic-loop/: tasks.md
openspec/changes/api-sse-session/: design.md  proposal.md  tasks.md
openspec/changes/chatbot-multiturn-evals/: design.md  proposal.md
openspec/changes/cho-34-rag-hybrid-retrieval/: tasks.md
openspec/changes/cho-35-finx-report-tools/: tasks.md
openspec/changes/cho-36-tracing-foundation/: design.md  proposal.md  tasks.md
openspec/changes/cho-37-agentic-loop/: design.md  proposal.md
openspec/changes/cho-40-chatbot-multiturn-evals/: tasks.md
openspec/changes/finx-report-tools/: proposal.md
openspec/changes/foundations-and-contracts/: design.md  proposal.md  tasks.md
openspec/changes/frontend-poc/: design.md  proposal.md  tasks.md
openspec/changes/rag-evals/: design.md  proposal.md  tasks.md
openspec/changes/rag-hybrid-retrieval/: design.md  proposal.md
openspec/specs/data-contracts/: spec.md
tests/: test_contracts.py
(+22 files in other folders)
