[project]
name = "customer-support-chatbot"
version = "0.1.0"
description = "Choice FinX agentic customer-support chatbot backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "deepeval>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
